--- a/chromium/manifest.json
+++ b/chromium/manifest.json
@@ -1,15 +1,26 @@
 {
   "manifest_version": 3,
-  "name": "Hiru Quick Save",
-  "description": "Save current page to Hiru bookmark manager.",
+  "default_locale": "en",
+  "name": "__MSG_extensionName__",
+  "description": "__MSG_extensionDescription__",
   "version": "0.1.0",
   "permissions": ["storage", "tabs", "activeTab", "cookies"],
   "host_permissions": [
     "http://*/*",
     "https://*/*"
   ],
+  "icons": {
+    "16": "icons/icon-16.png",
+    "32": "icons/icon-32.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
+  },
   "action": {
-    "default_title": "Save to Hiru",
-    "default_popup": "popup.html"
+    "default_title": "__MSG_actionSaveToHiru__",
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon-16.png",
+      "32": "icons/icon-32.png"
+    }
   }
 }
